[gd_scene load_steps=7 format=3 uid="uid://bscv4plx6kwat"]

[ext_resource type="FontFile" uid="uid://bwd442elqtlrd" path="res://fonts/Hacked Cyr.ttf" id="1_xwuhk"]
[ext_resource type="Script" path="res://UI/MainMenu.gd" id="2_fpa3i"]
[ext_resource type="Texture2D" uid="uid://bh5k08kbjae7f" path="res://sprites/menubackground.png" id="3_47p5k"]
[ext_resource type="PackedScene" uid="uid://cbjn5vbxbykpb" path="res://UI/SettingsUI.tscn" id="3_e0ent"]
[ext_resource type="Theme" uid="uid://cbjsm4l5i5dtq" path="res://Default.tres" id="4_8f7y2"]

[sub_resource type="Theme" id="Theme_18u53"]
default_font = ExtResource("1_xwuhk")
default_font_size = 36

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_18u53")
script = ExtResource("2_fpa3i")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_47p5k")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -82.0
offset_right = 84.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme = ExtResource("4_8f7y2")
text = "Play"

[node name="Settings" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme = ExtResource("4_8f7y2")
text = "Settings"

[node name="Quit" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme = ExtResource("4_8f7y2")
text = "Quit"

[node name="SettingsUI" parent="." instance=ExtResource("3_e0ent")]
visible = false
layout_mode = 1

[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="visibility_changed" from="SettingsUI" to="." method="_on_settings_ui_visibility_changed"]
